--- a/.env
+++ b/.env
@@ -18,8 +18,8 @@ SMTP_PASS=lbtu pkzy gykd ynlb
 SMTP_FROM_NAME=SupervitecApp
 SMTP_FROM_EMAIL=supervitecapp@gmail.com
 #URLS DE LA APLICACIÓN
-FRONTEND_URL=https://supervitec-app.onrender.com
-BACKEND_URL=https://supervitec-backend.onrender.com
+FRONTEND_URL=https://back-end-fjnh.onrender.com/api/v1
+BACKEND_URL=https://back-end-fjnh.onrender.com
 API_VERSION=v1
 #CONFIGURACIÓN DE PRODUCCIÓN
 MAX_FILE_SIZE=10mb
@@ -32,4 +32,4 @@ LOG_LEVEL=info
 DEFAULT_ADMIN_EMAIL=supervitecapp@gmail.com
 DEFAULT_ADMIN_PASSWORD=5up3r_v1t3c
 #CORS ORIGINS 
-CORS_ORIGINS=https://supervitec-app.onrender.com,https://supervitec-frontend.netlify.app,http://localhost:8081,exp://localhost:8081
+CORS_ORIGINS=https://back-end-fjnh.onrender.com,https://back-end-fjnh.onrender.com/api/v1,http://localhost:8081,exp://localhost:8081
