--- a/.env
+++ b/.env
@@ -3,7 +3,7 @@ NODE_ENV=production
 # 🚪 PUERTO
 PORT=3000
 # BASE DE DATOS
-MONGO_URI=mongodb+srv://supervitec:5up3r_v1t3c@cluster0.3ds9tp6.mongodb.net/supervitec_prod?retryWrites=true&w=majority&appName=Cluster0
+MONGO_URI=mongodb+srv://supervitec:5up3r_v1t3c@cluster0.nik2bdl.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
 # SEGURIDAD JWT 
 JWT_SECRET=SuperV1t3c_JWT_S3cr3t_K3y_2024_Pr0duct10n_V3ry_S3cur3_R4nd0m_Str1ng_64_Ch4rs
 JWT_REFRESH_SECRET=SuperV1t3c_R3fr3sh_JWT_S3cr3t_K3y_2024_Pr0duct10n_V3ry_S3cur3_128_Ch4rs_L0ng
