Fix: Solucionar doble hash en autenticación

--- a/.env
+++ b/.env
@@ -3,7 +3,7 @@ NODE_ENV=production
 # 🚪 PUERTO
 PORT=3000
 # BASE DE DATOS
-MONGO_URI=mongodb+srv://supervitec:5up3r_v1t3c@cluster0.3ds9tp6.mongodb.net/supervitec_prod?retryWrites=true&w=majority&appName=Cluster0
+MONGO_URI=mongodb+srv://supervitec:5up3r_v1t3c@cluster0.nik2bdl.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
 # SEGURIDAD JWT 
 JWT_SECRET=SuperV1t3c_JWT_S3cr3t_K3y_2024_Pr0duct10n_V3ry_S3cur3_R4nd0m_Str1ng_64_Ch4rs
 JWT_REFRESH_SECRET=SuperV1t3c_R3fr3sh_JWT_S3cr3t_K3y_2024_Pr0duct10n_V3ry_S3cur3_128_Ch4rs_L0ng
@@ -18,8 +18,8 @@ SMTP_PASS=lbtu pkzy gykd ynlb
 SMTP_FROM_NAME=SupervitecApp
 SMTP_FROM_EMAIL=supervitecapp@gmail.com
 #URLS DE LA APLICACIÓN
-FRONTEND_URL=https://supervitec-app.onrender.com
-BACKEND_URL=https://supervitec-backend.onrender.com
+FRONTEND_URL=https://back-end-fjnh.onrender.com/api/v1
+BACKEND_URL=https://back-end-fjnh.onrender.com
 API_VERSION=v1
 #CONFIGURACIÓN DE PRODUCCIÓN
 MAX_FILE_SIZE=10mb
@@ -32,4 +32,4 @@ LOG_LEVEL=info
 DEFAULT_ADMIN_EMAIL=supervitecapp@gmail.com
 DEFAULT_ADMIN_PASSWORD=5up3r_v1t3c
 #CORS ORIGINS 
-CORS_ORIGINS=https://supervitec-app.onrender.com,https://supervitec-frontend.netlify.app,http://localhost:8081,exp://localhost:8081
+CORS_ORIGINS=https://back-end-fjnh.onrender.com,https://back-end-fjnh.onrender.com/api/v1,http://localhost:8081,exp://localhost:8081
