Add missing admin user routes

--- a/.env
+++ b/.env
@@ -3,10 +3,10 @@ NODE_ENV=production
 # 🚪 PUERTO
 PORT=3000
 # BASE DE DATOS
-MONGO_URI=mongodb+srv://supervitec:5up3r_v1t3c@cluster0.nik2bdl.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
+MONGO_URI=mongodb+srv://SUPERVITEC:5up3r_v1t3c@cluster0.nik2bdl.mongodb.net/cluster0?retryWrites=true&w=majority&appName=Cluster0
 # SEGURIDAD JWT 
-JWT_SECRET=SuperV1t3c_JWT_S3cr3t_K3y_2024_Pr0duct10n_V3ry_S3cur3_R4nd0m_Str1ng_64_Ch4rs
-JWT_REFRESH_SECRET=SuperV1t3c_R3fr3sh_JWT_S3cr3t_K3y_2024_Pr0duct10n_V3ry_S3cur3_128_Ch4rs_L0ng
+JWT_SECRET=Super_vitec
+JWT_REFRESH_SECRET=5up3r_v1t3c
 JWT_EXPIRE=24h
 JWT_REFRESH_EXPIRE=7d
 #EMAIL CONFIGURACIÓN
@@ -30,6 +30,7 @@ ENABLE_LOGGING=true
 LOG_LEVEL=info
 # ADMIN POR DEFECTO
 DEFAULT_ADMIN_EMAIL=supervitecapp@gmail.com
+DEFAULT_ADMIN_EMAIL=supervitecingenieriasas@gmail.com
 DEFAULT_ADMIN_PASSWORD=5up3r_v1t3c
 #CORS ORIGINS 
 CORS_ORIGINS=https://back-end-fjnh.onrender.com,https://back-end-fjnh.onrender.com/api/v1,http://localhost:8081,exp://localhost:8081
